# qt-pomodoro-timer

./: .gitignore  CMakeLists.txt  README.md  README.pt-br.md  dbPomodoro_stats.db  main.cpp  mainwindow.ui  pomodoroStats.db  pomodoro_sessions.db  pomodoro_timer_db.cpp  pomodoro_timer_db.h  resources.qrc  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  timer.cpp  timer.h
includes/: sessionlogs.h  settingsdialog.h  soundmanager.h  systemtrayiconhandler.h  timer.h
includes/db/: database.h
src/: daterangedialog.cpp  floatingtimerwindow.cpp  helpwindow.cpp  main.cpp  minitimerwindow.cpp  sessionlogs.cpp  settingsdialog.cpp  soundmanager.cpp  statswindow.cpp  systemtrayiconhandler.cpp  timer.cpp
src/db/: database.cpp  dbstatsmanager.cpp
src/includes/: app_version.h  daterangedialog.h  floatingtimerwindow.h  helpwindow.h  minitimerwindow.h  sessionlogs.h  settingsdialog.h  soundmanager.h  statswindow.h  systemtrayiconhandler.h  timer.h  version.h
src/includes/db/: dbstatsmanager.h
src/includes/models/: focussession.h
src/includes/singleApplication/: singleapplication.h  singleapplication_p.h
src/includes/updater/: updater.h
src/models/: focussession.cpp
src/singleApplication/: singleapplication.cpp
src/ui/: daterangedialog.ui  floatingtimerwindow.ui  helpwindow.ui  mainwindow.ui  minitimerwindow.ui  settingsdialog.ui  statswindow.ui
src/updater/: updater.cpp
styles/: dataRangeDialog.qss  floatingTimer.qss  helpwindow.qss  sessionlogs.qss  settingsdialog.qss  statsWindow.qss  styles.qss  timer.qss
ui/: helpwindow.ui  mainwindow.ui  settingsdialog.ui
update_server/: update.json  version.json
